Add rewards section amd rewards/strategies route
